MODIF Liens (zone-delta.xyz)

--- a/app/login.ejs
+++ b/app/login.ejs
@@ -38,7 +38,7 @@
             </div>
             <div id="loginOptions">
                 <span class="loginSpanDim">
-                    <a href="https://site-33.net/user/password/reset">Mot de passe oublié?</a>
+                    <a href="https://zone-delta.xyz/user/password/reset">Mot de passe oublié?</a>
                 </span>
                 <label id="checkmarkContainer">
                     <input id="loginRememberOption" type="checkbox" checked>
@@ -63,7 +63,7 @@
             </button>
             <div id="loginDisclaimer">
                 <span class="loginSpanDim" id="loginRegisterSpan">
-                    <a href="https://site-33.net/user/register">Pas encore inscrit ?</a>
+                    <a href="https://zone-delta.xyz/user/register">Pas encore inscrit ?</a>
                 </span>
                 <p class="loginDisclaimerText">Votre mot de passe est envoyé directement à notre site.</p>
                 <p class="loginDisclaimerText">Zone Delta n'est pas affiliée à mojang ab.</p>
