--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -331,7 +331,7 @@
                     <!--<a href="https://github.com/dscalZi/HeliosLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Source (GitHub)</a>-->
                     <!-- The following must be included in third-party usage. -->
                     <!-- <a href="https://github.com/dscalzi/HeliosLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Original Source</a> -->
-                    <a href="https://discord.gg/R6KAdRrfRn" id="settingsAboutSupportButton" class="settingsAboutButton">Support</a>
+                    <a href="https://discord.gg/zonedelta" id="settingsAboutSupportButton" class="settingsAboutButton">Support</a>
                     <!--<a href="#" id="settingsAboutDevToolsButton" class="settingsAboutButton">DevTools Console</a>-->
                 </div>
             </div>
