--- a/app/app.ejs
+++ b/app/app.ejs
@@ -5,6 +5,7 @@
     <script src="./assets/js/scripts/uicore.js"></script>
     <script src="./assets/js/scripts/uibinder.js"></script>
     <link type="text/css" rel="stylesheet" href="./assets/css/launcher.css">
+    <link type="text/css" rel="stylesheet" href="./assets/css/radio.css">
     <style>
         body {
             /*background: url('assets/images/backgrounds/<%=bkid%>.jpg') no-repeat center center fixed;*/
@@ -33,6 +34,7 @@
     <div id="main">
         <%- include('welcome') %>
         <%- include('login') %>
+        <%- include('radio') %>
         <%- include('waiting') %>
         <%- include('loginOptions') %>
         <%- include('settings') %>
