Style (Radio): add a better style and home button

--- a/app/radio.ejs
+++ b/app/radio.ejs
@@ -2,7 +2,7 @@
     <div class="radio-player">
         <section class="radio-launcher">
                 <div class="img-radio">
-                <img class="musique-img" src="assets/images/icon.png" alt="song-img">
+                <img class="musique-img" src="https://i.pinimg.com/736x/7f/0f/37/7f0f376078deb7eddb6698590136014c.jpg" alt="song-img">
             </div>
             <div class="description">
                 <strong>
@@ -23,6 +23,9 @@
                 </div>
             </div>
         </section>
+        <button class="radio-home-button">
+            Accueil
+        </button>
     </div>
 </div>
 
