--- a/app/assets/css/radio.css
+++ b/app/assets/css/radio.css
@@ -17,25 +17,6 @@
     background-repeat: no-repeat;
 }
 
-.radio-player:before {
-    background: var(--url-radio);
-    content: "";
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    z-index: -40;
-    filter: blur(30px);
-    background-size: cover;
-    background-repeat: no-repeat;
-    border-top: solid 26px black;
-}
-
-.radio-player {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .radio-launcher {
     border-radius: 15px;
     position: relative;
@@ -43,7 +24,6 @@
     text-align: center;
     height: 45vh;
     background: #30303094;
-    width: 100vh;
     align-items: center;
     justify-content: space-around;
 }
@@ -148,4 +128,30 @@
     margin: 10px;
     text-align: center;
     padding-right: 10px;
+}
+
+#radioContainer {
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.radio-home-button {
+    display: block;
+
+    background: #fff;
+
+    border: none;
+    border-radius: 25px;
+
+    color: #000;
+
+    padding: .3rem .8rem;
+    margin: 2rem auto 0;
+
+    font-size: 1.1rem;
+
+    cursor: pointer;
 }
