--- a/app/assets/css/radio.css
+++ b/app/assets/css/radio.css
@@ -1,5 +1,7 @@
 :root {
     --url-radio: url('https://i.pinimg.com/736x/7f/0f/37/7f0f376078deb7eddb6698590136014c.jpg');
+    --button-bg-color: #fff;
+    --button-fg-color: #000;
 }
 
 .hidden {
@@ -161,12 +163,11 @@
     position: relative;
     display: block;
 
-    background: #fff;
+    background: var(--button-bg-color);
+    color: var(--button-fg-color);
 
     border: none;
     border-radius: 25px;
-
-    color: #000;
 
     padding: .3rem .8rem;
     margin: 2rem auto 0;
@@ -174,6 +175,4 @@
     font-size: 1.1rem;
 
     cursor: pointer;
-
-    mix-blend-mode: difference;
 }
