Avancement du design de la page de lancement de jeu Quelques traductions effectué.
A terminer:
- Design de la page de lancement de jeu
- Réglage de bug d'affichage
- Quelques traductions

--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -2,7 +2,7 @@
     <div id="upper">
         <div id="left">
             <div id="image_seal_container">
-                <img id="image_seal" src="assets/images/SealCircle.png"/>
+                <img id="image_seal" src="assets/images/DeltaHorizontalIcon.png"/>
                 <div id="updateAvailableTooltip">Mise à jour disponible</div>
             </div>
         </div>
@@ -125,13 +125,12 @@
                         &#10;<span id="newsButtonText">À la une</span>
                     </button>
                 </div>
+                <button id="launch_button">Lancer le jeu</button>
             </div>
         </div>
         <div id="right">
             <div class="bot_wrapper">
                 <div id="launch_content">
-                    <button id="launch_button">PLAY</button>
-                    <div class="bot_divider"></div>
                     <button id="server_selection_button" class="bot_label">&#8226; Aucun serveur n'est sélectionné</button>
                 </div>
                 <div id="launch_details">
