--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -71,6 +71,7 @@ body, button {
     transition: background-color 1s ease;
     /*background-color: rgba(0, 0, 0, 0.5);*/
     -webkit-user-select: none;
+    background: #2C2C2C !important;
 }
 
 /* Undraggable region on the top of the frame. */
@@ -2486,26 +2487,37 @@ input:checked + .toggleSwitchSlider:before {
 }
 #landingContainer > #upper > #left {
     display: inline-flex;
-    width: 15%;
+    margin-top: 5px;
+    width: 10%;
     height: 100%;
     justify-content: flex-end;
 }
 #landingContainer > #upper > #content {
     display: inline-flex;
-    width: 70%;
+    width: 0%;
     height: 100%;
 }
 #landingContainer > #upper > #right {
     display: inline-flex;
-    width: 15%;
+    width: 90%;
     height: 100%;
+    justify-content: flex-end;
 }
 
 /* Lower content container. */
 #landingContainer > #lower {
-    height: 23%;
+    position: absolute;
+    bottom: 0;
+    height: auto;
+    width: 100%;
     display: flex;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    flex-wrap: wrap;
+}
+.info_new {
+    width: 100%;
+    text-align: center;
+    position: relative;
 }
 #landingContainer > #lower > #left {
     position: relative;
@@ -2515,10 +2527,11 @@ input:checked + .toggleSwitchSlider:before {
     width: 33%;
     display: inline-flex;
     justify-content: center;
+    margin-top: 90px;
 }
 #landingContainer > #lower > #left #content {
     position: relative;
-    top: 25px;
+    /*top: 25px;*/
     display: inline-flex;
     line-height: 24px;
     left: 50px;
@@ -2531,6 +2544,7 @@ input:checked + .toggleSwitchSlider:before {
     width: 34%;
     display: inline-flex;
     justify-content: center;
+    text-align: center;
 }
 #landingContainer > #lower > #center #content {
     position: relative;
@@ -2545,6 +2559,7 @@ input:checked + .toggleSwitchSlider:before {
     height: 100%;
     width: 33%;
     display: inline-flex;
+    margin-top: 90px;
 }
 
 /*******************************************************************************
@@ -2878,12 +2893,9 @@ input:checked + .toggleSwitchSlider:before {
 
 /* Logo image. */
 #image_seal {
-    height: 100%;
-    width: auto;
+    height: 89px;
+    width: 385px;
     position: relative;
-    border: 2px solid white;
-    box-sizing: border-box;
-    border-radius: 50%;
 }
 
 /* Logo container styles. */
@@ -2984,11 +2996,16 @@ input:checked + .toggleSwitchSlider:before {
 
 /* Right hand user content container. */
 #user_content {
-    display: flex;
+    display: grid;
+    grid-template-columns: auto 60px;
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
-    position: relative;
+    position: absolute;
+    right: 80px;
+    padding: 10px;
+    background: rgba(100, 100, 100, 0.3);
+    border-radius: 15px;
 }
 
 /* User profile avatar container. */
@@ -2997,8 +3014,8 @@ input:checked + .toggleSwitchSlider:before {
     border: 2px solid #cad7e1;
     box-sizing: border-box;
     background: rgba(1, 2, 1, 0.5);
-    height: 70px;
-    width: 70px;
+    height: 60px;
+    width: 60px;
     box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
     overflow: hidden;
     position: relative;
@@ -3036,26 +3053,33 @@ input:checked + .toggleSwitchSlider:before {
 
 /* User profile name text. */
 #user_text {
-    font-size: 12px;
-    min-width: 135px;
+    font-size: 15px;
+    width: auto;
     font-weight: 900;
     letter-spacing: 1px;
     text-shadow: 0px 0px 20px black;
-    position: absolute;
-    right: 95px;
+    /*position: absolute;
+    right: 95px;*/
     text-align: right;
     -webkit-user-select: initial;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 /* Social media icon content container. */
 #mediaContent {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: column;
     margin-top: 25px;
-    height: calc(100% - 95px);
-    width: 70px;
+    height: auto;
+    width: 60px;
     align-items: center;
+    top: 80px;
+    right: 90px;
+    padding: 15px 5px 15px 5px;
+    background: rgba(100, 100, 100, 0.3);
+    border-radius: 15px;
 }
 
 /* Social Media Icon division containers. */
@@ -3203,7 +3227,7 @@ input:checked + .toggleSwitchSlider:before {
 
 /* Style for a general label on the bottom of the landing view. */
 .bot_label {
-    font-size: 90%;
+    font-size: 14px;
     height: 10;
     letter-spacing: 1px;
     font-weight: bold;
@@ -3226,13 +3250,13 @@ input:checked + .toggleSwitchSlider:before {
 /* Maintains maximum width on the status bar. */
 #server_status_wrapper {
     display: inline-flex;
-    width: 75px;
+    width: auto;
 }
 
 /* Span which displays the player count of the selected server. */
 #player_count {
-    color: #949494;
-    font-size: 8px;
+    color: #9B9B9B;
+    font-size: 14px;
     font-weight: 900;
     text-shadow: 0px 0px 20px #949494;
     margin-left: 10px;
@@ -3382,8 +3406,8 @@ input:checked + .toggleSwitchSlider:before {
     position: absolute;
     border-radius: 50%;
     background: red;
-    right: -1px;
-    top: 50%;
+    right: calc(50% - 50px);
+    top: calc(50% - 13px);
 }
 
 /* Arrow image which floats above the news button. */
@@ -3399,10 +3423,11 @@ input:checked + .toggleSwitchSlider:before {
     font-weight: 900;
     letter-spacing: 2px;
     text-shadow: 0px 0px 0px #bebcbb;
-    font-size: 11px;
+    font-size: 14px;
     line-height: 30px;
     display: flex;
     transition: 0.25s ease;
+    margin-bottom: 30px;
 }
 
 /* * *
@@ -3428,6 +3453,12 @@ input:checked + .toggleSwitchSlider:before {
     padding: 0px;
     transition: 0.25s ease;
     outline: none;
+    background: rgba(39, 60, 79, 0.3);
+    border: 1px solid rgba(44, 44, 45, 0.5);
+    border-radius: 10px;
+    padding: 20px 50px;
+    margin-bottom: 40px;
+
 }
 #launch_button:hover,
 #launch_button:focus {
