+ Résolution bug bouton "A la une" + Désactivation du bouton "Jouer" lors du lancement du jeu.

--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -31,7 +31,7 @@
                         <div class="mediaContainer" id="radioSettingsButton">
                             <button class="mediaButton" id="settingsMediaButton">
                                 <svg id="settingsSVG" class="mediaSVG" version="1.0"viewBox="0 0 512 512"xmlns="http://www.w3.org/2000/svg"><g transform="translate(0 512) scale(.1 -.1)"><path d="m3610 4987c-173-73-979-414-1790-757-1288-545-1486-632-1562-683-114-77-174-157-204-272-18-67-20-2843-3-2927 26-119 117-241 219-293 115-58-23-55 2287-55 1534 0 2137 3 2175 11 167 36 303 174 338 343 7 35 9 511 8 1481l-3 1430-22 55c-51 124-140 213-262 262l-56 23-3614 10 1439 609c791 335 1453 617 1470 627 65 40 87 120 52 188-23 47-61 72-113 77-39 4-82-11-359-129zm1106-1693c15-11 37-33 48-48 21-27 21-29 21-1441s0-1414-21-1441c-11-15-33-37-48-48l-27-21h-2129-2129l-27 21c-15 11-37 33-48 48-21 27-21 32-24 1404-2 757 0 1396 3 1420 8 52 53 108 99 121 18 6 887 9 2143 8l2112-2 27-21z"/><path d="m2878 2870c-45-24-82-72-97-125-15-54-15-596 0-650 15-52 82-119 134-134 54-15 1384-15 1438 0 44 12 101 59 125 103 15 27 17 72 20 331 2 201 0 314-8 345-15 60-53 108-104 131-39 18-79 19-756 18-690 0-716-1-752-19zm1422-445v-275h-665-665v275 275h665 665v-275z"/><path d="m1415 2833c-74-10-197-48-271-83-285-133-483-384-550-695-16-72-21-271-9-341 76-446 440-787 878-823 343-28 666 114 867 381 125 166 189 344 197 553 12 273-80 514-271 713-190 198-439 304-706 300-58 0-118-3-135-5zm273-299c44-9 117-35 171-61 78-37 109-59 177-127s90-99 127-177c73-150 92-281 63-432-47-244-227-447-466-527-90-30-250-37-350-16-143 30-297 124-385 234-176 220-204 516-72 765 39 74 143 186 220 239 150 102 335 139 515 102z"/><path d="m2957 1666c-68-25-97-66-97-138 0-58 30-104 83-128 60-28 186-27 242 0 48 23 85 80 85 130 0 43-35 103-73 125-42 25-186 31-240 11z"/><path d="m3586 1670c-57-18-106-85-106-146 0-45 40-102 87-125 38-18 58-21 137-17 76 3 98 8 124 27 88 62 82 199-10 247-38 20-185 29-232 14z"/><path d="m4205 1666c-133-50-128-240 8-277 64-17 201-7 234 17 49 37 68 72 68 124s-19 87-68 124c-36 26-182 34-242 12z"/><path d="m2935 1221c-58-35-70-58-70-126 0-54 4-67 25-90 43-46 71-55 178-55 86 0 103 3 133 23 94 63 88 199-12 249-50 26-212 25-254-1z"/><path d="m3561 1222c-54-27-76-65-76-127s22-100 76-128c28-15 54-17 142-15l108 3 40 42c35 38 39 47 39 97 0 44-5 60-26 86-42 50-73 60-176 60-69 0-102-5-127-18z"/><path d="m4179 1219c-47-28-72-72-71-125 0-55 25-97 72-123 31-17 55-21 129-21 107 0 148 14 182 61 51 71 21 182-57 215-21 9-69 14-126 14-76 0-100-4-129-21z"/></g></svg>
-                                <div id="settingsTooltip">Radio</div>
+                                <div id="settingsTooltip" style="right:80%">Radio</div>
                             </button>
                         </div>
                     </div>
@@ -158,9 +158,9 @@
                             <span id="newsArticleDate">Mar 15, 44 BC, 9:14 AM</span>
                         </div>
                         <div id="newsArticleAuthorWrapper">
-                            <span id="newsArticleAuthor">by Cicero</span>
+                            <span id="newsArticleAuthor">par Cicero</span>
                         </div>
-                        <a href="#" id="newsArticleComments">0 Comments</a>
+                        <a href="#" id="newsArticleComments">0 Commentaire</a>
                     </div>
                 </div>
                 <div id="newsNavigationContainer">
@@ -172,7 +172,7 @@
                             <polyline class="arrowLine" points="0.71 13.26 12.56 1.41 24.16 13.02"/>
                         </svg>
                     </button>
-                    <span id="newsNavigationStatus">1 of 1</span>
+                    <span id="newsNavigationStatus">1 sur 1</span>
                     <button id="newsNavigateRight">
                         <svg id="newsNavigationRightSVG" viewBox="0 0 24.87 13.97">
                             <defs>
