--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -2735,8 +2735,8 @@ input:checked + .toggleSwitchSlider:before {
     cursor: pointer;
     position: absolute;
     content: '';
-    height: 100%;
-    width: 100%;
+    height: 89px;
+    width: 89px;
     top: 0%;
     left: 0%;
     border-radius: 50%;
