fix settings and remove unused method

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -70,17 +70,6 @@
             </div>
             <div class="settingsFieldContainer">
                 <div class="settingsFieldLeft">
-                    <span class="settingsFieldTitle">Connexion automatique au serveur au lancement.</span>
-                </div>
-                <div class="settingsFieldRight">
-                    <label class="toggleSwitch">
-                        <input type="checkbox" cValue="AutoConnect">
-                        <span class="toggleSwitchSlider"></span>
-                    </label>
-                </div>
-            </div>
-            <div class="settingsFieldContainer">
-                <div class="settingsFieldLeft">
                     <span class="settingsFieldTitle">Lancement du processus de jeu détaché du lanceur.</span>
                     <span class="settingsFieldDesc">Si le jeu n'est pas détaché, la fermeture du lanceur fermera également le jeu..</span>
                 </div>
@@ -107,21 +96,8 @@
                 </div>
             </div>
             <div id="settingsModsContainer">
-                <div id="settingsReqModsContainer">
-                    <div class="settingsModsHeader">Mods requis</div>
-                    <div id="settingsReqModsContent">
-
-                    </div>
-                </div>
-                <div id="settingsOptModsContainer">
-                    <div class="settingsModsHeader">Mods optionnel</div>
-                    <div id="settingsOptModsContent">
-                        
-                    </div>
-                </div>
                 <div id="settingsDropinModsContainer">
-                    <div class="settingsModsHeader">Ajoute des Mods</div>
-                    <button id="settingsDropinFileSystemButton">+ Ajouter des mods <span id="settingsDropinRefreshNote">(F5 pour rafraîchir)</span></button>
+                    <div class="settingsModsHeader">Mods</div>
                     <div id="settingsDropinModsContent">
                     </div>
                 </div>
