edit css radio + change settings + début del commentaire

--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -3692,7 +3692,8 @@ input:checked + .toggleSwitchSlider:before {
 .serverListingStarTooltip {
     visibility: hidden;
     opacity: 0;
-    width: 65px;
+    width: max-content;
+    padding: 3px 10px;
     background-color: rgba(0, 0, 0, 0.40);
     text-align: center;
     border-radius: 4px;
