--- a/app/assets/css/radio.css
+++ b/app/assets/css/radio.css
@@ -178,3 +178,39 @@
 
     cursor: pointer;
 }
+
+.time-display {
+    font-size: 10px;
+    margin-top: .50rem;
+    flex-direction: row;
+    align-items: center;
+    display: flex;
+}
+
+.time-display .time-display-played {
+    margin-right: .5rem;
+}
+
+.time-display .time-display-progress {
+    flex: 1 1 auto;
+}
+
+.time-display-progress progress {
+    transition: width 1s;
+    transition-timing-function: linear;
+    -webkit-appearance: none;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.time-display-progress progress::-webkit-progress-bar {
+    background-color: #2c2c2d6c !important;
+}
+
+.time-display-progress progress::-webkit-progress-value {
+    background-color: #F5F5F5;
+}
+
+.time-display .time-display-total {
+    margin-left: .5rem;
+}
