--- a/app/radio.ejs
+++ b/app/radio.ejs
@@ -10,6 +10,13 @@
                 </strong>
                 <p class="album-title"></p>
                 <p class="author-title"></p>
+                <div class="time-display">
+                    <p class="time-display-played">00:00</p>
+                    <div class="time-display-progress">
+                        <progress id="song-progress" min="0" max="100" value="0"></progress>
+                    </div>
+                    <p class="time-display-total">00:00</p>
+                </div>
                 <div class="slider-cont">
                     <div class="player_btn">
                         <svg xmlns="http://www.w3.org/2000/svg" class="play" height="24px" viewBox="0 0 24 24" width="24px" fill="white"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M10 8.64v6.72L15.27 12z" opacity=".3"></path><path d="M8 19l11-7L8 5v14zm2-10.36L15.27 12 10 15.36V8.64z"></path></svg>
