--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -2750,18 +2750,18 @@ input:checked + .toggleSwitchSlider:before {
 #updateAvailableTooltip {
     cursor: pointer;
     visibility: hidden;
-    opacity: 0;
+    opacity: 1;
     width: 100px;
-    height: 15px;
+    height: max-content;
     background-color: rgb(0, 0, 0);
     color: #fff;
     text-align: center;
     border-radius: 4px;
-    padding: 2px;
+    padding: 5px;
     position: absolute;
     z-index: 1;
-    top: 115%;
-    left: -17.5px;
+    top: 130px;
+    left: -12.5px;
     font-family: 'Avenir Medium';
     font-size: 12px;
     transition: visibility 0s linear 0.25s, opacity 0.25s ease;
